--- a/terms.html
+++ b/terms.html
@@ -14,12 +14,20 @@
 		</p>
 		<p>
 		Steps:
-		* Start by taking a deep breath from the lower part of your chest.
-		* Notice how the color of body frame in the app fills up from bottom up, regulate your rhythm to match the animation.
-		* Now try holding your breath till the visual cue for exhale or as long as your able, not exceeding the cue.
-		* Slowly exhale through your mouth on the same rhythm as the color is emptied in the body frame.
-		* You will notice that exhalation is close to twice as long as inhalation as deeper exhalations are more beneficial.
-		* Repeat the cycle four more times for a total of 5 deep breaths and following the rhythm in the application. 
+		<ul>
+			<li>Start by taking a deep breath from the lower part of your chest.
+			</li>
+			<li>Notice how the color of body frame in the app fills up from bottom up, regulate your rhythm to match the animation.
+			</li>
+			<li>Now try holding your breath till the visual cue for exhale or as long as your able, not exceeding the cue.
+			</li>
+			<li>Slowly exhale through your mouth on the same rhythm as the color is emptied in the body frame.
+			</li>
+			<li>You will notice that exhalation is close to twice as long as inhalation as deeper exhalations are more beneficial.
+			</li>
+			<li>Repeat the cycle four more times for a total of 5 deep breaths and following the rhythm in the application.
+			</li>
+		</ul>
 		</p>
 		<p>
 		Once you feel comfortable with the above technique, you may want to incorporate words that can enhance the exercise. You can use any positive words or those familiar with yoga can use any mantra of your choosing.
