--- a/terms.html
+++ b/terms.html
@@ -5,12 +5,15 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<link rel="stylesheet" href="explore.css" type="text/css" media="screen" title="no title" charset="utf-8" />
 		<title>
-			About Signal Patterns
+			Just Breathe, hitchhikerlabs
 		</title>
 	</head>
-	<body>
+		<body>
 		<p>
-			It is thought by many cultures that the process of breathing is the essence of being. Using and learning proper breathing techniques is one of the most beneficial things that can be done for both short and long term physical and emotional health. Deep breathing or Abdominal breathing technique when performed regularly alleviates stress and leads to increased cardio-vascular health. This app gives you a visual cue on the correct breathing technique. 
+			Thought of as the essence of being by many cultures, breath and proper breathing technique is one of the most beneficial things
+		     that can be done for both short and long term physical and emotional health.
+			  Deep breathing or Abdominal breathing technique when performed regularly alleviates stress and leads to increased
+			   cardio-vascular health. This app gives you a visual cue on the correct breathing technique. 
 		</p>
 		<p>
 		Steps:
@@ -19,13 +22,11 @@
 			</li>
 			<li>Notice how the color of body frame in the app fills up from bottom up, regulate your rhythm to match the animation.
 			</li>
-			<li>Now try holding your breath till the visual cue for exhale or as long as your able, not exceeding the cue.
-			</li>
 			<li>Slowly exhale through your mouth on the same rhythm as the color is emptied in the body frame.
 			</li>
-			<li>You will notice that exhalation is close to twice as long as inhalation as deeper exhalations are more beneficial.
+			<li>Repeat the cycle of breaths for as long as you are comfortable by following the rhythm in the application.
 			</li>
-			<li>Repeat the cycle four more times for a total of 5 deep breaths and following the rhythm in the application.
+			<li>Take care to avoid any noise, shallowness, jerkiness in the breaths and  pause between inhalation and exhalation. 
 			</li>
 		</ul>
 		</p>
@@ -33,8 +34,12 @@
 		Once you feel comfortable with the above technique, you may want to incorporate words that can enhance the exercise. You can use any positive words or those familiar with yoga can use any mantra of your choosing.
 		</p>
 		<p>
-			<p>Source <a href="http://www.amsa.org/healingthehealer/breathing.cfm">American Medical Student Association</a>.</p>
+			<p>Sources:<br>
+			 <a href="http://www.amsa.org/healingthehealer/breathing.cfm">American Medical Student Association</a>
+			 <br>
+			 <a href="http://www.swamij.com/swami-rama-the-breath.htm">Swami Rama of the Himalayas</a>
+			 </p>
 		</p>
-		<p>To learn more, please visit <a href="http://hitchhikerlabs.com/justbreathe/">www.hitchhikerlabs.com</a>.</p>
+		<p>To learn more or donate to support further enhancements, please visit <a href="http://hitchhikerlabs.com/justbreathe/">www.hitchhikerlabs.com/justbreathe</a>.</p>
 	</body>
-</html>
+	</html>
