--- a/terms.html
+++ b/terms.html
@@ -22,16 +22,16 @@
 			</li>
 			<li>Notice how the color of body frame in the app fills up from bottom up, regulate your rhythm to match the animation.
 			</li>
-			<li>Slowly exhale through your mouth on the same rhythm as the color is emptied in the body frame.
+			<li>Slowly exhale on the same rhythm as the color is emptied in the body frame.
 			</li>
 			<li>Repeat the cycle of breaths for as long as you are comfortable by following the rhythm in the application.
 			</li>
-			<li>Take care to avoid any noise, shallowness, jerkiness in the breaths and  pause between inhalation and exhalation. 
+			<li>Take care to avoid any noise, shallowness, jerkiness or pauses during inhalation and exhalation. 
 			</li>
 		</ul>
 		</p>
 		<p>
-		Once you feel comfortable with the above technique, you may want to incorporate words that can enhance the exercise. You can use any positive words or those familiar with yoga can use any mantra of your choosing.
+		Once comfortable with the above technique, you may want to incorporate positive words or those familiar with yoga can use any mantra to enhance your experience.
 		</p>
 		<p>
 			<p>Sources:<br>
